Rancher/resources/conjur-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conjur-oss
  namespace: conjur-system
  annotations:
    ingress.kubernetes.io/auth-tls-insecure: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
  - hosts:
    - conjur.pc.home
    secretName: conjur-oss-conjur-ssl-cert
  rules:
  - host: conjur.pc.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: conjur-oss
            port:
              name: https
